<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_1"
    android:background="#FFFEFE">

    <TextView
        android:id="@+id/reg_skip"
        android:layout_width="28dp"
        android:layout_height="17dp"
        android:layout_marginStart="295dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/skip"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_logo" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="161dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/pleas_sign_up_to_continue"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="253dp"
        android:layout_height="192dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22">

        <EditText
            android:id="@+id/name_reg"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/name"
            android:singleLine="true"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/linearLayout6"
            android:layout_width="253dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#CAC2C2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_reg" />

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/email_address"
            android:singleLine="true"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <View
            android:id="@+id/linearLayout7"
            android:layout_width="253dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#CAC2C2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_reg" />

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="55dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:singleLine="true"
            android:background="@null"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <View
            android:id="@+id/linearLayout8"
            android:layout_width="253dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#CAC2C2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_reg" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="21dp"
            android:layout_height="14dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
            app:srcCompat="@drawable/flag" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="7dp"
            android:layout_height="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
            app:srcCompat="@drawable/arrow_down" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="23dp"
            android:layout_height="13dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="+971"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

        <EditText
            android:id="@+id/phone_reg"
            android:layout_width="53dp"
            android:layout_height="13dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:hint="(12345785)"
            android:singleLine="true"
            android:inputType="phone"
            android:background="@null"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/register_but"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_but">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_you_agree_to_the"
            android:textColor="#000000"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condition"
            android:textColor="#6b46c1"
            android:textStyle="bold"
            android:textSize="11sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>