<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FFFEFE">

    <TextView
        android:id="@+id/lpgin_skip"
        android:layout_width="28dp"
        android:layout_height="15dp"
        android:layout_marginStart="295dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="148dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/style_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="21dp"
            android:layout_height="14dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flag" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="7dp"
            android:layout_height="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_down" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="23dp"
            android:layout_height="13dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="+971"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_phon"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:hint="(12345785)"
            android:singleLine="true"
            android:inputType="phone"
            android:textSize="10sp"
            android:textStyle="bold"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginTop="55dp"
            android:background="#CAC2C2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="55dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="39dp"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/loginForget_pass"
            android:layout_width="38dp"
            android:layout_height="15dp"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:gravity="center_horizontal"
            android:text="Forget?"
            android:textColor="#6b46c1"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_password"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_style"
        android:text="@string/log_in_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="155dp"
        android:layout_height="19dp"
        android:layout_marginTop="25dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"

        />

    <TextView
        android:id="@+id/sinUp_log"
        android:layout_width="51dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textColor="#6b46c1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:layout_width="51dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#6b46c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sinUp_log"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>